tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.stderr
error[E0412]: cannot find type `ExtMuxIndepMultiplexorsMuxAIndex` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:212:39
    |
212 |     pub fn mux_a(&mut self) -> Result<ExtMuxIndepMultiplexorsMuxAIndex, CanError> {
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
347 | pub enum ExtMuxIndepMultiplexorsMuxBIndex {
    | ----------------------------------------- similarly named enum `ExtMuxIndepMultiplexorsMuxBIndex` defined here
    |
help: an enum with a similar name exists
    |
212 -     pub fn mux_a(&mut self) -> Result<ExtMuxIndepMultiplexorsMuxAIndex, CanError> {
212 +     pub fn mux_a(&mut self) -> Result<ExtMuxIndepMultiplexorsMuxBIndex, CanError> {
    |
help: you might be missing a type parameter
    |
 69 | impl<ExtMuxIndepMultiplexorsMuxAIndex> ExtMuxIndepMultiplexors {
    |     ++++++++++++++++++++++++++++++++++

error[E0422]: cannot find struct, variant or union type `ExtMuxIndepMultiplexorsMuxAM0` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:216:58
    |
216 |                     ExtMuxIndepMultiplexorsMuxAIndex::M0(ExtMuxIndepMultiplexorsMuxAM0 {
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM0`
...
362 | pub struct ExtMuxIndepMultiplexorsMuxBM0 {
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM0` defined here

error[E0422]: cannot find struct, variant or union type `ExtMuxIndepMultiplexorsMuxAM1` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:223:58
    |
223 |                     ExtMuxIndepMultiplexorsMuxAIndex::M1(ExtMuxIndepMultiplexorsMuxAM1 {
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM1`
...
433 | pub struct ExtMuxIndepMultiplexorsMuxBM1 {
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM1` defined here

error[E0422]: cannot find struct, variant or union type `ExtMuxIndepMultiplexorsMuxAM2` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:230:58
    |
230 |                     ExtMuxIndepMultiplexorsMuxAIndex::M2(ExtMuxIndepMultiplexorsMuxAM2 {
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM2`
...
548 | pub struct ExtMuxIndepMultiplexorsMuxBM2 {
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM2` defined here

error[E0412]: cannot find type `ExtMuxIndepMultiplexorsMuxAM0` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:266:16
    |
266 |         value: ExtMuxIndepMultiplexorsMuxAM0,
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM0`
...
362 | pub struct ExtMuxIndepMultiplexorsMuxBM0 {
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM0` defined here

error[E0412]: cannot find type `ExtMuxIndepMultiplexorsMuxAM1` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:278:16
    |
278 |         value: ExtMuxIndepMultiplexorsMuxAM1,
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM1`
...
433 | pub struct ExtMuxIndepMultiplexorsMuxBM1 {
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM1` defined here

error[E0412]: cannot find type `ExtMuxIndepMultiplexorsMuxAM2` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:290:16
    |
290 |         value: ExtMuxIndepMultiplexorsMuxAM2,
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM2`
...
548 | pub struct ExtMuxIndepMultiplexorsMuxBM2 {
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM2` defined here

error[E0592]: duplicate definitions with name `set_m0`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:264:5
    |
163 | /     pub fn set_m0(
164 | |         &mut self,
165 | |         value: ExtMuxIndepMultiplexorsMuxBM0,
166 | |     ) -> Result<(), CanError> {
    | |_____________________________- other definition for `set_m0`
...
264 | /     pub fn set_m0(
265 | |         &mut self,
266 | |         value: ExtMuxIndepMultiplexorsMuxAM0,
267 | |     ) -> Result<(), CanError> {
    | |_____________________________^ duplicate definitions for `set_m0`

error[E0592]: duplicate definitions with name `set_m1`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:276:5
    |
175 | /     pub fn set_m1(
176 | |         &mut self,
177 | |         value: ExtMuxIndepMultiplexorsMuxBM1,
178 | |     ) -> Result<(), CanError> {
    | |_____________________________- other definition for `set_m1`
...
276 | /     pub fn set_m1(
277 | |         &mut self,
278 | |         value: ExtMuxIndepMultiplexorsMuxAM1,
279 | |     ) -> Result<(), CanError> {
    | |_____________________________^ duplicate definitions for `set_m1`

error[E0592]: duplicate definitions with name `set_m2`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:288:5
    |
187 | /     pub fn set_m2(
188 | |         &mut self,
189 | |         value: ExtMuxIndepMultiplexorsMuxBM2,
190 | |     ) -> Result<(), CanError> {
    | |_____________________________- other definition for `set_m2`
...
288 | /     pub fn set_m2(
289 | |         &mut self,
290 | |         value: ExtMuxIndepMultiplexorsMuxAM2,
291 | |     ) -> Result<(), CanError> {
    | |_____________________________^ duplicate definitions for `set_m2`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:137:46
    |
137 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:216:21
    |
216 |                     ExtMuxIndepMultiplexorsMuxAIndex::M0(ExtMuxIndepMultiplexorsMuxAM0 {
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxIndepMultiplexorsMuxBIndex`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:223:21
    |
223 |                     ExtMuxIndepMultiplexorsMuxAIndex::M1(ExtMuxIndepMultiplexorsMuxAM1 {
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxIndepMultiplexorsMuxBIndex`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:230:21
    |
230 |                     ExtMuxIndepMultiplexorsMuxAIndex::M2(ExtMuxIndepMultiplexorsMuxAM2 {
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxIndepMultiplexorsMuxBIndex`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:238:46
    |
238 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`
